// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ItemsList Render should render ItemsList Component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ItemsList
    currentItemsList={
        Array [
            Object {
              "favorite": true,
              "id": "WsKVAem02Efuw",
              "images": Object {
                "original": Object {
                  "url": "https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif",
                },
              },
              "title": "happy emma watson GIF",
            },
            Object {
              "favorite": true,
              "id": "rSsoG2WPmzOIE",
              "images": Object {
                "original": Object {
                  "url": "https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif",
                },
              },
              "title": "emma watson GIF",
            },
          ]
    }
    favoritesButton={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <img
                    alt="hi"
                    src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
          />
          <button
                    onClick={[Function]}
          >
                    Make me your favorite
          </button>
          Added to Favorites
</div>,
        <div>
          <img
                    alt="hi"
                    src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
          />
          <button
                    onClick={[Function]}
          >
                    Make me your favorite
          </button>
          Added to Favorites
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "WsKVAem02Efuw",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="hi"
              src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
/>,
            <button
              onClick={[Function]}
>
              Make me your favorite
</button>,
            "Added to Favorites",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "hi",
              "src": "https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Make me your favorite",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Make me your favorite",
            "type": "button",
          },
          "Added to Favorites",
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "rSsoG2WPmzOIE",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="hi"
              src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
/>,
            <button
              onClick={[Function]}
>
              Make me your favorite
</button>,
            "Added to Favorites",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "hi",
              "src": "https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Make me your favorite",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Make me your favorite",
            "type": "button",
          },
          "Added to Favorites",
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <img
                        alt="hi"
                        src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
            />
            <button
                        onClick={[Function]}
            >
                        Make me your favorite
            </button>
            Added to Favorites
</div>,
          <div>
            <img
                        alt="hi"
                        src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
            />
            <button
                        onClick={[Function]}
            >
                        Make me your favorite
            </button>
            Added to Favorites
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "WsKVAem02Efuw",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="hi"
                src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
/>,
              <button
                onClick={[Function]}
>
                Make me your favorite
</button>,
              "Added to Favorites",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "hi",
                "src": "https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Make me your favorite",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Make me your favorite",
              "type": "button",
            },
            "Added to Favorites",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "rSsoG2WPmzOIE",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="hi"
                src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
/>,
              <button
                onClick={[Function]}
>
                Make me your favorite
</button>,
              "Added to Favorites",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "hi",
                "src": "https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Make me your favorite",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Make me your favorite",
              "type": "button",
            },
            "Added to Favorites",
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test ItemsList Render should render ItemsList Component null condition 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ItemsList
    currentItemsList={
        Array [
            Object {
              "favorite": false,
              "id": "WsKVAem02Efuw",
              "images": Object {
                "original": Object {
                  "url": "https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif",
                },
              },
              "title": "happy emma watson GIF",
            },
            Object {
              "favorite": false,
              "id": "rSsoG2WPmzOIE",
              "images": Object {
                "original": Object {
                  "url": "https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif",
                },
              },
              "title": "emma watson GIF",
            },
          ]
    }
    favoritesButton={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <img
                    alt="hi"
                    src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
          />
          <button
                    onClick={[Function]}
          >
                    Make me your favorite
          </button>
</div>,
        <div>
          <img
                    alt="hi"
                    src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
          />
          <button
                    onClick={[Function]}
          >
                    Make me your favorite
          </button>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "WsKVAem02Efuw",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="hi"
              src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
/>,
            <button
              onClick={[Function]}
>
              Make me your favorite
</button>,
            null,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "hi",
              "src": "https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Make me your favorite",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Make me your favorite",
            "type": "button",
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "rSsoG2WPmzOIE",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="hi"
              src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
/>,
            <button
              onClick={[Function]}
>
              Make me your favorite
</button>,
            null,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "hi",
              "src": "https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Make me your favorite",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Make me your favorite",
            "type": "button",
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <img
                        alt="hi"
                        src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
            />
            <button
                        onClick={[Function]}
            >
                        Make me your favorite
            </button>
</div>,
          <div>
            <img
                        alt="hi"
                        src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
            />
            <button
                        onClick={[Function]}
            >
                        Make me your favorite
            </button>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "WsKVAem02Efuw",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="hi"
                src="https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif"
/>,
              <button
                onClick={[Function]}
>
                Make me your favorite
</button>,
              null,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "hi",
                "src": "https://media1.giphy.com/media/WsKVAem02Efuw/giphy.gif",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Make me your favorite",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Make me your favorite",
              "type": "button",
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "rSsoG2WPmzOIE",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="hi"
                src="https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif"
/>,
              <button
                onClick={[Function]}
>
                Make me your favorite
</button>,
              null,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "hi",
                "src": "https://media3.giphy.com/media/rSsoG2WPmzOIE/giphy.gif",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Make me your favorite",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Make me your favorite",
              "type": "button",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test ItemsList Render should render component structure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(ItemsList)
    store={
        Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "currentItemsList": Array [],
      "dispatch": [Function],
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "currentItemsList": Array [],
        "dispatch": [Function],
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          },
          "unsubscribe": [Function],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
